# tiny_vit

./: .gitignore  README.md  install.sh  pyproject.toml
src/__init__.py/: main.py  model.py
src/tiny_vit/: attn.py  glu.py  main.py  model.py  train.py
src/tiny_vit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tiny_vit/dataloaders/: cifar10.py  imagenet1k.py
