[project]
name = "tiny-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.11.2",
    "jax>=0.7.1",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
