[project]
name = "tiny-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.11.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.7.0",
    "tensorflow-datasets>=4.9.9",
]

metal = [
    "jax>=0.7.0",
]
